src/main/java/com/example/easywheelz/Errors/NoRoleExeption.java
package com.example.easywheelz.Errors;

public class NoRoleExeption  extends  RuntimeException{
    public NoRoleExeption(String errorMessage) {
        super(errorMessage);
    }

}
